# purefunctor.me

./: .gitignore  dune-project  index.css  index.html  index.ssr.html  index.template.html  mdx.config.js  package.json  pnpm-lock.yaml  render.mjs  vite.config.js  website.opam  website.opam.template  wrangler.toml
app/: Hydrate.re  Main.re  Render.re  dune
blog/: Blog.re  BlogIndex.re  BlogPost.re  BlogPostCore.re  BlogPostHeader.re  Hljs.re  dune
blog/mdx/: and-all-that-could-have-been.mdx  hello.mdx  ssr-your-code-blocks.mdx
common/: FramerMotion.re  Hljs.re  Icons.re  Link.re  Meta.re  NotFound.re  Theme.re  dune
components/: App.re  Footer.re  FramerMotion.re  Header.re  HeaderActual.re  HeaderNav.re  HeaderScreen.re  HeaderState.re  Icons.re  Layout.re  Link.re  Theme.re  dune
components/contexts/: ServerUrlProvider.re
components/pages/: Index.re  IndexArticle.re  IndexHeader.re  IndexLinks.re  NotFound.re  Profile.re  ProfileDescriptions.re  ProfileIdolMusic.re  Router.re  Work.re  WorkArticle.re  WorkExperience.re  WorkPortfolio.re
ppx/mdx/: dune  mdx_ppx.ml
ppx/mdx/runtime/: dune  mdx_ppx_runtime.re
ppx/mdx/test/: dune  failure.input  success.input  test.t
public/: about.txt
scripts/: mdx-loader.mjs  register.mjs  render.mjs
ssr/: vite.config.js
